# RustyLlama

./: Cargo.toml  LICENSE  README.md
src/: main.rs
src/config/: mod.rs
src/db/: mod.rs
src/models/: mod.rs
src/provider/: mod.rs  ollama.rs
src/ui/: mod.rs
